# BoxBreathing

./: README.md  box_breathing_demo.ipynb  boxbreathing.py  breathInAndOut.py  clear.py  countdown.py  howManyRounds.py  main.py  pyproject.toml  requirements.txt
boxbreathing/: breathInAndOut.py  countdown.py  howManyRounds.py  main.py  run_box_breathing.py  utils.py
notebooks/: box_breathing_demo.ipynb
